syntax = "proto3";

service File{
  rpc Upload(FileReq)returns(FileRsp){}
}

message FileReq{
  string file_name = 1;
  int64 file_size = 2;
  bytes  body = 3;
}

message FileRsp{
  uint32 code = 1;
  string msg = 2;
  map<string, string>  data = 3;
}